# python-react-web-app-template

./: .env_template  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/api/: main.py
api/tests/: test_main.py  test_test.py
proxy/: nginx.conf
server/: Dockerfile  main.py  requirements.txt
ui/: package-lock.json  package.json
