[tool.poetry]
name = "api"
version = "0.1.0"
description = "The api for the template project."
authors = ["Oscar Arbelaez <oscar@arbelaez.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
motor = "^3.0.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
